Implement the starter app as using cyclejs

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0"
+    "@cycle/core": "^6.0.3",
+    "@cycle/dom": "^9.4.0",
+    "@cycle/storage": "^2.0.3",
+    "meteor-node-stubs": "~0.2.0",
+    "rx": "^4.1.0"
   }
 }
